# crisp

./: .gitignore  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cargo.toml  example.lisp  index.html  introduction.html  print.html  searchindex.js  searchindex.json
.devcontainer/: devcontainer.json  setup_dev_container.sh  setup_devcontainer.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci-cd.yml  devskim.yml  gh-pages.yml
book/: book.toml
book/src/: SUMMARY.md  basic-usage.md  definitions.md  introduction.md
doc/: .rustc_info.json
doc/doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
doc/doc/anstream/: all.html  enum.ColorChoice.html  fn.stderr.html  fn.stdout.html  index.html  macro.eprint.html  macro.eprintln.html  macro.panic.html  macro.print.html  macro.println.html  struct.AutoStream.html  struct.Buffer.html  struct.StripStream.html  trait.Lockable.html  trait.RawStream.html
doc/doc/anstyle_parse/: all.html  index.html  struct.AsciiParser.html  struct.Params.html  struct.ParamsIter.html  struct.Parser.html  struct.Utf8Parser.html  trait.CharAccumulator.html  trait.Perform.html  type.DefaultCharAccumulator.html
doc/doc/anstyle_query/: all.html  fn.clicolor.html  fn.clicolor_force.html  (+6 more)
docs/: book.toml
docs/src/: introduction.md
src/: atom.rs  crisp.py  environment.rs  evaluator.rs  lexical_analyzer.rs  main.rs  program_arguments.rs  syntax_parser.rs  token.rs
src/cli/: mod.rs  program_arguments.rs
src/lexer/: lexical_analyzer.rs  mod.rs
tests/: example_test.rs
(+4767 files in other folders)
