[package]
name = "crisp"
description = "(common (rust) lisp)"
version = "0.0.1"
license-file = "LICENSE.md"
authors = ["AUTHORS.md"]
readme = "README.md"
edition = "2021"
homepage = "https://chrisbilger.com/crisp/"
repository = "https://github.com/ChristopherBilg/crisp"
documentation = "https://chrisbilger.com/crisp/"

[[bin]]
name = "crisp"

[dependencies]
clap = { version = "3.1.17", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
