[package]
name = "crisp"
description = "(custom (rust) lisp)"
version = "0.0.4"
license-file = "LICENSE.md"
authors = ["AUTHORS.md"]
readme = "README.md"
edition = "2021"
homepage = "https://chrisbilger.com/crisp/"
repository = "https://github.com/ChristopherBilg/crisp"
documentation = "https://chrisbilger.com/crisp/"

[[bin]]
name = "crisp"

[dependencies]
clap = { version = "4.1.3", features = ["derive"] }
